fix layout problem

--- a/A1/css/style.css
+++ b/A1/css/style.css
@@ -1,78 +1,39 @@
-body {
-    background: #eff3f5;
-}
+body {margin: 0;}
 
-.top {
-	height: auto;
-	width: 100%;
-	background: rgb(189, 181, 181);
-	position: fixed;
-	top: 0;
-	left: 0%;
-	margin-bottom: 5px;
-}
-
-.top ul {
-	height: auto;
-    width: auto;
+ul.topnav {
     list-style-type: none;
-    white-space: nowrap;
-    overflow: hidden;
-    margin-left: 60%;
+    margin: 0;
     padding: 0;
-}
-
-.top li {
-    float: left;
-    /* 使li内容横向浮动，即横向排列  */
-    margin-right: 2%;
-    /* 两个li之间的距离*/
-    position: relative;
     overflow: hidden;
+    background-color: #333;
 }
 
-.top li a {
-    /* 设置链接内容显示的格式*/
+ul.topnav li {float: left;}
+
+ul.topnav h1 {
     display: block;
-    /* 把链接显示为块元素可使整个链接区域可点击 */
+    text-align: center;
+    color: white;
+    margin-left: 1em;
+    font-size: x-large;
+}
+
+ul.topnav li a {
+    display: block;
     color: white;
     text-align: center;
-    padding: 3px;
-    overflow: hidden;
+    padding: 20px 16px;
     text-decoration: none;
-    /* 去除下划线 */
+    font-size: large;
 }
 
-.top li a:hover {
-    /* 鼠标选中时背景变为黑色 */
-    background-color: #111;
-}
+ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-.top h1 {
-	position: relative;
-	height: auto;
-	width: auto;
-	margin-top: 1%;
-	float: left;
-	margin-left: 1%;
-	margin-right: 0%;
-	margin-bottom: 0%;
-	color: #FFFFFF;
-	text-shadow: 1px 1px #999999;
-	font-size: xx-large;
-}
+ul.topnav li a.active {background-color: #4CAF50;}
 
-.clear{
-	clear: both;
+ul.topnav li.right {float: right;}
 
-}
-.content {
-	position: relative;
-	float: none;
-	width: auto;
-	margin-top: 12%;
-	margin-right: 0px;
-	margin-left: 0px;
-	margin-bottom: 0px;
-	height: auto;
+@media screen and (max-width: 600px){
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
 }
